Utils: Add remove from vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,12 @@ add_executable(run_build_kingman run_build_kingman.c bbst.h utils.h bbst.c mat.c
 add_executable(run_time run_time.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(run_cdf_consts run_cdf_consts.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(test_bbst test/test_bbst.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(test_utils test/test_utils.c utils.h utils.c sampling.c sampling.h)
+add_executable(test_utils test/test_utils.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(test_coal test/test_coal.c bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(test_dist test/test_sampling.c bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
 target_link_libraries(amazephase m)
 target_link_libraries(test_dist m)
+target_link_libraries(test_utils m)
 target_link_libraries(run_lmvu m)
 target_link_libraries(run_build_kingman m)
 target_link_libraries(test_coal m)
