--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(run_lmvu run_lmvu.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal
 add_executable(run_build_kingman run_build_kingman.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(run_time run_time.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(run_cdf_consts run_cdf_consts.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
+add_executable(run_pure_cutoff run_pure_cutoff.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(run_cutoff run_cutoff.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(run_left_prob run_left_prob.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(test_bbst test/test_bbst.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h dist.c dist.h utils.c sampling.c sampling.h)
@@ -21,12 +22,14 @@ add_executable(test_utils test/test_utils.c bbst.h utils.h bbst.c mat.c mat.h co
 add_executable(test_coal test/test_coal.c bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
 add_executable(test_dist test/test_sampling.c bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
 target_link_libraries(amazephase m)
-target_link_libraries(test_dist m)
-target_link_libraries(test_utils m)
 target_link_libraries(run_lmvu m)
 target_link_libraries(run_build_kingman m)
-target_link_libraries(test_coal m)
 target_link_libraries(run_time m)
 target_link_libraries(run_cdf_consts m)
+target_link_libraries(run_pure_cutoff m)
 target_link_libraries(run_cutoff m)
 target_link_libraries(run_left_prob m)
+target_link_libraries(test_bbst m)
+target_link_libraries(test_utils m)
+target_link_libraries(test_coal m)
+target_link_libraries(test_dist m)
