--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# cmake_minimum_required(VERSION <specify CMake version here>)
+cmake_minimum_required(VERSION 3.7)
 project(amazephase C)
 
 set(CMAKE_C_FLAGS "-std=c11 ${CMAKE_C_FLAGS}")
@@ -9,27 +9,32 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_library(amazephase bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(run_lmvu run_lmvu.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(run_build_kingman run_build_kingman.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(run_time run_time.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(run_cdf_consts run_cdf_consts.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(run_pure_cutoff run_pure_cutoff.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(run_cutoff run_cutoff.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(run_left_prob run_left_prob.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(test_bbst test/test_bbst.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(test_utils test/test_utils.c bbst.h utils.h bbst.c mat.c mat.h coal.c coal.h phdist.c phdist.h dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(test_coal test/test_coal.c bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
-add_executable(test_dist test/test_sampling.c bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
-target_link_libraries(amazephase m)
-target_link_libraries(run_lmvu m)
-target_link_libraries(run_build_kingman m)
-target_link_libraries(run_time m)
-target_link_libraries(run_cdf_consts m)
-target_link_libraries(run_pure_cutoff m)
-target_link_libraries(run_cutoff m)
-target_link_libraries(run_left_prob m)
-target_link_libraries(test_bbst m)
-target_link_libraries(test_utils m)
-target_link_libraries(test_coal m)
-target_link_libraries(test_dist m)
+
+SET(SOURCE_FILES bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
+add_library(amazephase ${SOURCE_FILES})
+add_executable(run_lmvu run_lmvu.c)
+add_executable(run_build_kingman run_build_kingman.c)
+add_executable(run_time run_time.c)
+add_executable(run_cdf_consts run_cdf_consts.c)
+add_executable(run_pure_cutoff run_pure_cutoff.c)
+add_executable(run_cutoff run_cutoff.c)
+add_executable(run_left_prob run_left_prob.c)
+add_executable(test_bbst test/test_bbst.c)
+add_executable(test_utils test/test_utils.c)
+add_executable(test_coal test/test_coal.c)
+add_executable(test_sampling test/test_sampling.c)
+
+find_package(GSL REQUIRED)
+target_link_libraries(amazephase m gsl gslcblas)
+
+target_link_libraries(run_lmvu amazephase)
+target_link_libraries(run_build_kingman amazephase)
+target_link_libraries(run_time amazephase)
+target_link_libraries(run_cdf_consts amazephase)
+target_link_libraries(run_pure_cutoff amazephase)
+target_link_libraries(run_cutoff amazephase)
+target_link_libraries(run_left_prob amazephase)
+target_link_libraries(test_bbst amazephase)
+target_link_libraries(test_utils amazephase)
+target_link_libraries(test_coal amazephase)
+target_link_libraries(test_sampling amazephase)
