Coal: Beginning of CDF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(run_cdf_consts run_cdf_consts.c)
 add_executable(run_pure_cutoff run_pure_cutoff.c)
 add_executable(run_cutoff run_cutoff.c)
 add_executable(run_left_prob run_left_prob.c)
+add_executable(run_im_cdf run_im_cdf.c)
 add_executable(test_bbst test/test_bbst.c)
 add_executable(test_utils test/test_utils.c)
 add_executable(test_coal test/test_coal.c)
@@ -34,6 +35,7 @@ target_link_libraries(run_cdf_consts amazephase)
 target_link_libraries(run_pure_cutoff amazephase)
 target_link_libraries(run_cutoff amazephase)
 target_link_libraries(run_left_prob amazephase)
+target_link_libraries(run_im_cdf amazephase)
 target_link_libraries(test_bbst amazephase)
 target_link_libraries(test_utils amazephase)
 target_link_libraries(test_coal amazephase)
