Add ONCE migration parameter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(run_left_prob run_left_prob.c)
 add_executable(run_im_cdf run_im_cdf.c)
 add_executable(run_im_exp run_im_exp.c)
 add_executable(run_num_coals_prob run_num_coals_prob.c)
+add_executable(run_im_ss_state_size run_im_ss_state_size.c)
 add_executable(test_bbst test/test_bbst.c)
 add_executable(test_utils test/test_utils.c)
 add_executable(test_coal test/test_coal.c)
@@ -40,6 +41,7 @@ target_link_libraries(run_left_prob amazephase)
 target_link_libraries(run_im_cdf amazephase)
 target_link_libraries(run_im_exp amazephase)
 target_link_libraries(run_num_coals_prob amazephase)
+target_link_libraries(run_im_ss_state_size amazephase)
 target_link_libraries(test_bbst amazephase)
 target_link_libraries(test_utils amazephase)
 target_link_libraries(test_coal amazephase)
