Add expected function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ add_executable(run_pure_cutoff run_pure_cutoff.c)
 add_executable(run_cutoff run_cutoff.c)
 add_executable(run_left_prob run_left_prob.c)
 add_executable(run_im_cdf run_im_cdf.c)
+add_executable(run_im_mat run_im_mat.c)
 add_executable(run_im_exp run_im_exp.c)
+add_executable(run_im_full_prob_exp run_im_full_prob_exp.c)
 add_executable(run_num_coals_prob run_num_coals_prob.c)
 add_executable(run_im_ss_state_size run_im_ss_state_size.c)
 add_executable(test_bbst test/test_bbst.c)
@@ -39,7 +41,9 @@ target_link_libraries(run_pure_cutoff amazephase)
 target_link_libraries(run_cutoff amazephase)
 target_link_libraries(run_left_prob amazephase)
 target_link_libraries(run_im_cdf amazephase)
+target_link_libraries(run_im_mat amazephase)
 target_link_libraries(run_im_exp amazephase)
+target_link_libraries(run_im_full_prob_exp amazephase)
 target_link_libraries(run_num_coals_prob amazephase)
 target_link_libraries(run_im_ss_state_size amazephase)
 target_link_libraries(test_bbst amazephase)
