--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(run_pure_cutoff run_pure_cutoff.c)
 add_executable(run_cutoff run_cutoff.c)
 add_executable(run_left_prob run_left_prob.c)
 add_executable(run_im_cdf run_im_cdf.c)
+add_executable(run_im_cdf_full run_im_cdf_full.c)
 add_executable(run_im_mat run_im_mat.c)
 add_executable(run_im_exp run_im_exp.c)
 add_executable(run_im_full_prob_exp run_im_full_prob_exp.c)
@@ -41,6 +42,7 @@ target_link_libraries(run_pure_cutoff amazephase)
 target_link_libraries(run_cutoff amazephase)
 target_link_libraries(run_left_prob amazephase)
 target_link_libraries(run_im_cdf amazephase)
+target_link_libraries(run_im_cdf_full amazephase)
 target_link_libraries(run_im_mat amazephase)
 target_link_libraries(run_im_exp amazephase)
 target_link_libraries(run_im_full_prob_exp amazephase)
