--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,26 +10,26 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 
-SET(SOURCE_FILES bbst.h utils.h coal.h sampling.h dist.h bbst.c coal.c dist.c utils.c sampling.c)
+SET(SOURCE_FILES src/bbst.h src/utils.h src/coal.h src/sampling.h src/dist.h src/bbst.c src/coal.c src/dist.c src/utils.c src/sampling.c)
 add_library(amazephase ${SOURCE_FILES})
-add_executable(run_lmvu run_lmvu.c)
-add_executable(run_build_kingman run_build_kingman.c)
-add_executable(run_time run_time.c)
-add_executable(run_cdf_consts run_cdf_consts.c)
-add_executable(run_pure_cutoff run_pure_cutoff.c)
-add_executable(run_cutoff run_cutoff.c)
-add_executable(run_left_prob run_left_prob.c)
-add_executable(run_im_cdf run_im_cdf.c)
-add_executable(run_im_cdf_full run_im_cdf_full.c)
-add_executable(run_im_mat run_im_mat.c)
-add_executable(run_im_exp run_im_exp.c)
-add_executable(run_im_full_prob_exp run_im_full_prob_exp.c)
-add_executable(run_num_coals_prob run_num_coals_prob.c)
-add_executable(run_im_ss_state_size run_im_ss_state_size.c)
-add_executable(test_bbst test/test_bbst.c)
-add_executable(test_utils test/test_utils.c)
-add_executable(test_coal test/test_coal.c)
-add_executable(test_sampling test/test_sampling.c)
+add_executable(run_lmvu ./cmd/run_lmvu.c)
+add_executable(run_build_kingman ./cmd/run_build_kingman.c)
+add_executable(run_time ./cmd/run_time.c)
+add_executable(run_cdf_consts ./cmd/run_cdf_consts.c)
+add_executable(run_pure_cutoff ./cmd/run_pure_cutoff.c)
+add_executable(run_cutoff ./cmd/run_cutoff.c)
+add_executable(run_left_prob ./cmd/run_left_prob.c)
+add_executable(run_im_cdf ./cmd/run_im_cdf.c)
+add_executable(run_im_cdf_full ./cmd/run_im_cdf_full.c)
+add_executable(run_im_mat ./cmd/run_im_mat.c)
+add_executable(run_im_exp ./cmd/run_im_exp.c)
+add_executable(run_im_full_prob_exp ./cmd/run_im_full_prob_exp.c)
+add_executable(run_num_coals_prob ./cmd/run_num_coals_prob.c)
+add_executable(run_im_ss_state_size ./cmd/run_im_ss_state_size.c)
+add_executable(test_bbst src/test/test_bbst.c)
+add_executable(test_utils src/test/test_utils.c)
+add_executable(test_coal src/test/test_coal.c)
+add_executable(test_sampling src/test/test_sampling.c)
 
 find_package(GSL REQUIRED)
 target_link_libraries(amazephase m gsl gslcblas)
