--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(run_im_exp ./cmd/run_im_exp.c)
 add_executable(run_im_full_prob_exp ./cmd/run_im_full_prob_exp.c)
 add_executable(run_num_coals_prob ./cmd/run_num_coals_prob.c)
 add_executable(run_im_ss_state_size ./cmd/run_im_ss_state_size.c)
+add_executable(run_disc ./cmd/run_disc.c)
 add_executable(test_bbst src/test/test_bbst.c)
 add_executable(test_utils src/test/test_utils.c)
 add_executable(test_coal src/test/test_coal.c)
@@ -48,6 +49,7 @@ target_link_libraries(run_im_exp amazephase)
 target_link_libraries(run_im_full_prob_exp amazephase)
 target_link_libraries(run_num_coals_prob amazephase)
 target_link_libraries(run_im_ss_state_size amazephase)
+target_link_libraries(run_disc amazephase)
 target_link_libraries(test_bbst amazephase)
 target_link_libraries(test_utils amazephase)
 target_link_libraries(test_coal amazephase)
