Coal: add state-space pre-rw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,10 @@ SET(SOURCE_FILES src/bbst.h src/utils.h src/coal.h src/sampling.h src/dist.h src
 add_library(amazephase ${SOURCE_FILES})
 add_executable(run_lmvu ./cmd/run_lmvu.c)
 add_executable(run_build_kingman ./cmd/run_build_kingman.c)
+add_executable(run_cmp_states_rw ./cmd/run_cmp_states_rw.c)
 add_executable(run_time ./cmd/run_time.c)
 add_executable(run_cdf_consts ./cmd/run_cdf_consts.c)
+add_executable(run_pdf_consts_mut ./cmd/run_pdf_consts_mut.c)
 add_executable(run_pure_cutoff ./cmd/run_pure_cutoff.c)
 add_executable(run_cutoff ./cmd/run_cutoff.c)
 add_executable(run_left_prob ./cmd/run_left_prob.c)
@@ -27,6 +29,7 @@ add_executable(run_im_cdf_full ./cmd/run_im_cdf_full.c)
 add_executable(run_im_mat ./cmd/run_im_mat.c)
 add_executable(run_im_exp ./cmd/run_im_exp.c)
 add_executable(run_im_full_prob_exp ./cmd/run_im_full_prob_exp.c)
+add_executable(run_im_full_prob_cdf ./cmd/run_im_full_prob_cdf.c)
 add_executable(run_num_coals_prob ./cmd/run_num_coals_prob.c)
 add_executable(run_im_ss_state_size ./cmd/run_im_ss_state_size.c)
 add_executable(run_disc ./cmd/run_disc.c)
@@ -40,8 +43,10 @@ target_link_libraries(amazephase m gsl gslcblas)
 
 target_link_libraries(run_lmvu amazephase)
 target_link_libraries(run_build_kingman amazephase)
+target_link_libraries(run_cmp_states_rw amazephase)
 target_link_libraries(run_time amazephase)
 target_link_libraries(run_cdf_consts amazephase)
+target_link_libraries(run_pdf_consts_mut amazephase)
 target_link_libraries(run_pure_cutoff amazephase)
 target_link_libraries(run_cutoff amazephase)
 target_link_libraries(run_left_prob amazephase)
@@ -50,6 +55,7 @@ target_link_libraries(run_im_cdf_full amazephase)
 target_link_libraries(run_im_mat amazephase)
 target_link_libraries(run_im_exp amazephase)
 target_link_libraries(run_im_full_prob_exp amazephase)
+target_link_libraries(run_im_full_prob_cdf amazephase)
 target_link_libraries(run_num_coals_prob amazephase)
 target_link_libraries(run_im_ss_state_size amazephase)
 target_link_libraries(run_disc amazephase)
